Tweak layout of corptax, so that it fits on screen better.  Fix a typo.

--- a/company-accounts.yaml
+++ b/company-accounts.yaml
@@ -378,7 +378,7 @@ computations:
   accounts:
   - Accounts Payable
 
-# Other creditrs
+# Other creditors
 - id: other-creditors
   kind: line
   description: Other Creditors
