--- a/company-accounts-minimal.yaml
+++ b/company-accounts-minimal.yaml
@@ -99,6 +99,8 @@ metadata:
   # Report metadata
   report:
 
+#    pretty-print: true
+
     # The accounting-standards applied.  One of:
     #   frs101, frs102, frsse, full-irs, micro-entities, other-standards,
     #   small-entities-regime.
